Arrays.asList for nullity